--- a/src/app/business/cross-components/label-error/label-error.component.html
+++ b/src/app/business/cross-components/label-error/label-error.component.html
@@ -11,5 +11,6 @@
         icon="pi pi-refresh"
         (click)="handleReload()"
         class="p-button-danger"
+        style="max-width: 150px;"
     ></button>
 </div>
