--- a/src/app/business/pages/users/users.component.html
+++ b/src/app/business/pages/users/users.component.html
@@ -77,7 +77,7 @@
                         [globalFilterFields]="['code','name','email','phone']"
                         [paginator]="true" [rowsPerPageOptions]="[10,20,30]"
                         [showCurrentPageReport]="true"
-                        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+                        currentPageReportTemplate="Mostrando del {first} al {last} de {totalRecords} registros"
                         [(selection)]="selectedProducts" selectionMode="multiple"
                         [rowHover]="true" dataKey="id">
                         <ng-template pTemplate="caption">
