--- a/src/app/layout/app.menu.component.html
+++ b/src/app/layout/app.menu.component.html
@@ -16,9 +16,9 @@
     text-align: center;
     flex-shrink: 0;
 }
-    ::ng-deep .active-route {
+    /* ::ng-deep .active-route {
         background-color: #f9fafb;
-    }
+    } */
 </style>
 <div class="layout-wrapper">
     <ul class="layout-menu">
