--- a/src/assets/layout/styles/theme/lara-light-indigo/theme.css
+++ b/src/assets/layout/styles/theme/lara-light-indigo/theme.css
@@ -4213,7 +4213,8 @@
   }
 
   .p-scrollpanel .p-scrollpanel-bar {
-    background: #f9fafb;
+    background: #1e366d;
+    /*background: #f9fafb*/;
     border: 0 none;
   }
 
