--- a/src/app/business/pages/dashboard/dashboard.component.html
+++ b/src/app/business/pages/dashboard/dashboard.component.html
@@ -6,70 +6,43 @@
 
     <div class="col-12 xl:col-6">
         <div class="card">
-            <h5>Recent Sales</h5>
-            <p-table
-                [value]="products"
-                [paginator]="true"
-                [rows]="5"
-                responsiveLayout="scroll"
-            >
-                <ng-template pTemplate="header">
-                    <tr>
-                        <th>Image</th>
-                        <th pSortableColumn="name">
-                            Name <p-sortIcon field="name"></p-sortIcon>
-                        </th>
-                        <th pSortableColumn="price">
-                            Price <p-sortIcon field="price"></p-sortIcon>
-                        </th>
-                        <th>View</th>
-                    </tr>
-                </ng-template>
-                <ng-template pTemplate="body" let-product>
-                    <tr>
-                        <td style="width: 15%; min-width: 5rem">
-                            <img
-                                src="assets/demo/images/product/{{
-                                    product.image
-                                }}"
-                                class="shadow-4"
-                                alt="{{ product.name }}"
-                                width="50"
-                            />
-                        </td>
-                        <td style="width: 35%; min-width: 7rem">
-                            {{ product.name }}
-                        </td>
-                        <td style="width: 35%; min-width: 8rem">
-                            {{ product.price | currency : "USD" }}
-                        </td>
-                        <td style="width: 15%">
-                            <button
-                                pButton
-                                pRipple
-                                type="button"
-                                icon="pi pi-search"
-                                class="p-button p-component p-button-text p-button-icon-only"
-                            ></button>
-                        </td>
-                    </tr>
-                </ng-template>
-            </p-table>
-        </div>
-        <app-similarity-titles></app-similarity-titles>
-    </div>
-
-    <div class="col-12 xl:col-6">
-        <div class="card">
-            <h5>Sales Overview</h5>
+            <h5>Inscripciones</h5>
             <p-chart
                 type="line"
                 [data]="chartData"
                 [options]="chartOptions"
             ></p-chart>
         </div>
-        <div class="card" style="max-height: 500px; overflow-x: auto">
-            <div class="flex align-items-center justify-content-between mb-4">
+        <div class="card">
+            <h5>Inscripciones</h5>
+            <p-chart
+                type="line"
+                [data]="chartData"
+                [options]="chartOptions"
+            ></p-chart>
+        </div>
+        <app-similarity-titles></app-similarity-titles>
+    </div>
+
+    <div class="col-12 xl:col-6">
+        <div class="card">
+            <h5>Inscripciones</h5>
+            <p-chart
+                type="line"
+                [data]="chartData"
+                [options]="chartOptions"
+            ></p-chart>
+        </div>
+        <div class="card">
+            <h5>Asesorias</h5>
+            <p-chart
+                type="line"
+                [data]="chartData"
+                [options]="chartOptions"
+            ></p-chart>
+        </div>
+        <div class="card" style="max-height: 500px;">
+            <div class="flex align-items-center justify-content-between mb-2">
                 <h5>Notificaciones</h5>
                 <div>
                     <p-button
@@ -104,7 +77,9 @@
             </div>
 
             <ng-template #notificacionList>
-                <span
+
+                <p-scrollPanel [style]="{ width: '100%', height: '350px' }">
+                    <span
                     *ngIf="notificationsToday.length > 0"
                     class="block text-600 font-medium mb-3"
                     >Hoy</span
@@ -199,6 +174,12 @@
                         </li>
                     </ul>
                 </ng-container>
+
+                </p-scrollPanel>
+
+
+
+                
             </ng-template>
             <ng-template #notificacionError>
                 <app-label-error
