--- a/src/app/business/pages/inscription/insctiption.component.html
+++ b/src/app/business/pages/inscription/insctiption.component.html
@@ -1,3 +1,4 @@
+<p-toast key="tst"></p-toast>
 <div class="grid p-fluid">
     <div class="col-12">
         <app-breadcrumb [items]="breadcrumbItems"></app-breadcrumb>
