--- a/src/app/business/pages/inscription/step4-component.html
+++ b/src/app/business/pages/inscription/step4-component.html
@@ -8,7 +8,10 @@
     <p-toast key="tst"></p-toast>
     <form [formGroup]="presenter.formStep4">
         <div class="grid p-fluid mt-3">
-            <div class="field col-12 md:col-12">
+            <div
+                *ngIf="statusTitlesList === 'complete'"
+                class="field col-12 md:col-12"
+            >
                 <span class="p-float-label">
                     <textarea
                         formControlName="title"
@@ -19,6 +22,13 @@
                     ></textarea>
                     <label for="textarea">Título del proyecto de tesis</label>
                 </span>
+            </div>
+            <div *ngIf="statusTitlesList === 'charging'" class="col-12">
+                <p-skeleton class="w-full" height="90px" />
+            </div>
+            <div *ngIf="statusTitlesList === 'error'" class="col-12">
+                <app-label-error [message]="messsageTitlesError" (reload)="callGetTitlesList()">
+                </app-label-error>
             </div>
         </div>
         <div
@@ -110,7 +120,7 @@
                         pInputTextarea
                     ></textarea>
                     <label for="textarea"
-                        >Comentarios u observaciones de la inscripción</label
+                        >Comentarios u observaciones (opcional)</label
                     >
                 </span>
             </div>
@@ -155,7 +165,13 @@
     >
     <div class="justify-content-center gap-3 mb-3">
         <div class="flex">
-            <input type="text" style="width: 50px;" pInputText [(ngModel)]="minimumPercentage" class="mb-3"/>
+            <input
+                type="text"
+                style="width: 50px"
+                pInputText
+                [(ngModel)]="minimumPercentage"
+                class="mb-3"
+            />
             <label class="label-porcantaje">%</label>
         </div>
         <div class="w-full">
